# PolarImGui

.github/workflows/: main.yml
app/src/main/cpp/: CMakeLists.txt  Menu.h  native-lib.cpp
app/src/main/cpp/ByNameModding/include/BNM/: BNM.hpp
app/src/main/cpp/ByNameModding/include/BNM/UserSettings/: GlobalSettings.hpp
app/src/main/cpp/Data/Fonts/: Roboto-Regular.h
app/src/main/cpp/Hooking/: VulkanHook.h
app/src/main/cpp/ImGui/: imgui_impl_vulkan.cpp
app/src/main/cpp/Misc/: FunctionPointers.h  ImGuiStuff.h  Utils.h
app/src/main/cpp/Unity/: Input.h  Screen.h
scripts/: patch_dobby.py
